# NwSMTP

./: Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  config.h.in~  configure  configure.in  nwsmtp.cron.d  nwsmtp.init  nwsmtp.spec  nwsmtp.sysconfig
conf-examples/: nwsmtp-dbg.conf  nwsmtp.conf  nwsmtp.conf-auth
debian/: README.Debian  README.source  changelog  control  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  nwsmtp.cron.d.ex  nwsmtp.default.ex  nwsmtp.doc-base.EX  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
debian/patches/: debian-changes-0.1-1  series
etc/: Makefile.am  Makefile.in  greylisting.conf  ip_param.conf  nwsmtp.conf  remove_headers.conf  virtual_alias_maps
src/: Makefile.am  Makefile.in  adkim.cpp  adkim.h  aliases.cpp  aliases.h  aspf.h  aspf_impl.h  atormoz.cpp  atormoz.h  auth.cpp  auth.h  avir_client.cpp  avir_client.h  bb_client_auth.cpp  bb_client_auth.h  bb_client_mailfrom.cpp  bb_client_mailfrom.h  bb_client_rcpt.cpp  bb_client_rcpt.h  bb_parser.cpp  bb_parser.h  buffer_iterator.h  buffers.h  check.h  coroutine.hpp  envelope.cpp  envelope.h  eom_parser.cpp  eom_parser.h  header_parser.cpp  header_parser.h  host_seq_resolver.h  http_client.cpp  http_client.h  ip_options.cpp  ip_options.h  log.cpp  log.h  main.cpp  (+37 more)
src/net/: basic_dns_resolver.hpp  basic_dns_resolver_service.hpp  dns.hpp  dns_resolver.hpp  network_array.hpp  resolver_iterator.hpp  rfc1035_414.hpp
src/net/impl/: dns_resolver_impl.hpp
src/rc_clients/: basic_rc_client.cpp  basic_rc_client.h  greylisting.cpp  greylisting.h  greylisting_options.h
src/tests/: Makefile.am  Makefile.in  basic_test.h  bbproxy.cpp  buffers.cpp  client1.cpp  client2.cpp  client3.cpp  gr.cpp  resolv.cpp  spf.cpp  spool.cpp  tormoz.cpp  tormoz2.cpp  ylog.cpp  ylog.h
src/yplatform/: base64.h
